# Mylarplugin

./: CMakeLists.txt  Makefile  README.md  Tracymakefile  build.sh
include/: alt_tab.h  audio.h  components.h  container.h  coverflow.h  desktop_icons.h  dock.h  dock_thumbnails.h  drag.h  drag_workspace_switcher.h  edit_pin.h  events.h  heart.h  hypriso.h  layout_thumbnails.h  overview.h  popup.h  screenshot.h  second.h  settings.h  simple_dbus.h  snap_assist.h  titlebar.h  workspace_indicator.h
include/client/: raw_windowing.h  windowing.h
src/: alt_tab.cpp  audio.cpp  components.cpp  container.cpp  coverflow.cpp  desktop_icons.cpp  dock.cpp  dock_thumbnails.cpp  drag.cpp  drag_workspace_switcher.cpp  edit_pin.cpp  events.cpp  first.cpp  heart.cpp  hotcorners.cpp  hypriso.cpp  icons.cpp  layout_thumbnails.cpp  overview.cpp  popup.cpp  quick_shortcut_menu.cpp  resizing.cpp  screenshot.cpp  second.cpp  settings.cpp  simple_dbus.cpp  snap_assist.cpp  snap_preview.cpp  splash.cpp  titlebar.cpp  workspace_indicator.cpp
src/client/: build.sh  raw_windowing.cpp  windowing.cpp
